src/objects/RD_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_No__c</fullName>
        <label>Account No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>RD Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RD Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>